--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "pepper.com",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Competence test for Front-end Developer position",
   "main": "src/index.js",
   "scripts": {
-    "build": "gulp build",
-    "clean": "rimraf /dist",
-    "postsetup": "yarn",
+    "build": "jspm bundle-sfx ./app/js/index ./dest/js/build.min.js --minify --skip-source-maps",
+    "clean": "rimraf /dest /app/css",
+    "jspm": "jspm install",
+    "postbuild": "gulp build",
+    "postsetup": "yarn && npm run jspm > /dev/null",
     "prebuild": "npm run clean",
     "prestart": "npm run build",
     "prewatch": "npm run clean",
@@ -19,20 +21,40 @@
   "author": "https://github.com/tvardy",
   "license": "WTFPL",
   "dependencies": {
-    "yarn": "0.24.5"
+    "yarn": "0.24.6"
   },
   "devDependencies": {
     "browser-sync": "2.18.12",
+    "concurrently": "3.4.0",
     "cult": "2.0.6",
     "eslint": "3.19.0",
+    "eslint-config-standard": "6.2.1",
+    "eslint-plugin-promise": "3.5.0",
+    "eslint-plugin-standard": "2.3.1",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "4.0.0",
+    "gulp-css-inline-assets": "0.1.5",
     "gulp-cssnano": "2.1.2",
     "gulp-plumber": "1.1.0",
+    "gulp-rename": "1.2.2",
+    "gulp-replace": "0.5.4",
     "gulp-sass": "3.1.0",
     "gulp-sourcemaps": "2.6.0",
+    "jspm": "0.16.53",
     "rimraf": "2.6.1",
     "static-server": "2.0.4"
   },
-  "private": true
+  "private": true,
+  "jspm": {
+    "configFile": "jspm.config.js",
+    "dependencies": {
+      "mateuszgachowski/Carpet.js": "github:mateuszgachowski/Carpet.js@3.1.3",
+      "timjansen/minified.js": "github:timjansen/minified.js@2015.1.1"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@5.8.24",
+      "babel-runtime": "npm:babel-runtime@5.8.24",
+      "core-js": "npm:core-js@1.1.4"
+    }
+  }
 }
