--- a/package.json
+++ b/package.json
@@ -7,31 +7,27 @@
     "prebuild": "npm run clean",
     "build": "webpack --progress --colors --env=prod",
     "postbuild": "gulp build",
-
     "clean": "rimraf ./dest ./app/css",
-
     "setup": "npm i --production --silent > /dev/null",
     "postsetup": "yarn",
-
     "prestart": "npm run build",
     "start": "static-server ./dest",
-
     "prewatch": "npm run clean",
     "watch": "concurrently \"cult -- watch\" \"webpack-dev-server\"",
-
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "https://github.com/tvardy",
   "license": "WTFPL",
   "dependencies": {
-    "carpet.js": "github:mateuszgachowski/Carpet.js#3.1.3",
-    "minified": "github:timjansen/minified.js#2015.1.1",
     "yarn": "0.24.6"
   },
   "devDependencies": {
     "babel-core": "6.24.1",
+    "babel-eslint": "7.2.3",
     "babel-loader": "7.0.0",
+    "babel-plugin-inferno": "3.2.0",
+    "babel-plugin-syntax-jsx": "6.18.0",
     "babel-preset-latest": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
     "concurrently": "3.4.0",
@@ -49,6 +45,9 @@
     "gulp-replace": "0.5.4",
     "gulp-sass": "3.1.0",
     "gulp-sourcemaps": "2.6.0",
+    "inferno": "3.5.2",
+    "inferno-component": "3.5.2",
+    "inferno-devtools": "3.5.2",
     "rimraf": "2.6.1",
     "static-server": "2.0.4",
     "webpack": "2.6.1",
