--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-plugin-syntax-jsx": "6.18.0",
     "babel-preset-latest": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
+    "classnames": "2.2.5",
     "concurrently": "3.4.0",
     "cult": "2.0.6",
     "eslint": "3.19.0",
@@ -50,6 +51,8 @@
     "inferno-devtools": "3.5.2",
     "rimraf": "2.6.1",
     "static-server": "2.0.4",
+    "superagent": "3.5.2",
+    "uuid": "3.1.0",
     "webpack": "2.6.1",
     "webpack-dev-server": "2.4.5",
     "webpack-merge": "4.1.0"
