--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,8 @@
   ],
   "plugins": [
     "babel-plugin-syntax-jsx",
-    [ "babel-plugin-inferno",  { "imports": true }]
+    [ "babel-plugin-inferno",  { "imports": true }],
+    "transform-class-properties"
   ],
   "sourceMaps": "inline",
   "env": {
