--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "babel-loader": "7.0.0",
     "babel-plugin-inferno": "3.2.0",
     "babel-plugin-syntax-jsx": "6.18.0",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-preset-latest": "6.24.1",
-    "babel-preset-stage-1": "6.24.1",
+    "babel-preset-stage-3": "6.24.1",
     "classnames": "2.2.5",
     "concurrently": "3.4.0",
     "cult": "2.0.6",
